Feat(package.json): Added a new script to start app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "index": "node index.js"
+    "index": "node index.js",
+    "start": "npm run index"
   },
   "dependencies": {
     "googleapis": "^100.0.0",
